--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>ArWeave Twitter Example</title>
+
+	<link href="https://cdn.jsdelivr.net/npm/daisyui@2.8.0/dist/full.css" rel="stylesheet">
+	</link>
+	<script src="https://cdn.tailwindcss.com"></script>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-
+	<script src="https://unpkg.com/arweave/bundles/web.bundle.js"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
 </body>
+
 </html>
