--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,15 +5,23 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>ArWeave Twitter Example</title>
+	<title>ArWeave dot Social</title>
 
-	<link href="https://cdn.jsdelivr.net/npm/daisyui@2.8.0/dist/full.css" rel="stylesheet">
-	</link>
-	<script src="https://cdn.tailwindcss.com"></script>
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="arweave dot social">
+	<meta property="og:url" content="https://arweave.social">
+	<meta property="og:description" content="Post to the world for a small fee">
+	<meta property="og:image" content="https://arweave.social/social.svg">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@arweave_social">
+	<meta name="twitter:creator" content="@arweave_social">
+	<meta name="twitter:title" content="arweave_social">
+	<meta name="twitter:description" content="Post to the world for a small fee">
+	<meta name="twitter:image" content="https://arweave.social/social.svg">
 
+
+	<link href="/tailwind.css" rel="stylesheet">
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
 	<script src="https://unpkg.com/arweave/bundles/web.bundle.js"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
